# internal/dto/position.go
@@ -1,5 +1,7 @@
 package dto
 
+import "supermarket-backend/internal/model"
+
 type CreatePositionRequest struct {
 	PositionName string `json:"position_name" binding:"required"`
 }
@@ -11,4 +13,13 @@ type UpdatePositionRequest struct {
 type PositionResponse struct {
 	PositionID   string `json:"position_id"`
 	PositionName string `json:"position_name"`
+}
+
+func FromPositionModelToResponse(position *model.Position) *PositionResponse {
+	var p *PositionResponse = &PositionResponse{}
+
+	p.PositionID = position.PositionID
+	p.PositionName = position.PositionName
+
+	return p
 }
